--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -1,11 +1,11 @@
 .navbar {
-  padding: 8px 24px;
+  padding: 8px 120px;
   position: sticky;
   z-index: 999;
   top: 0;
   background-color: var(--gray);
   backdrop-filter: blur(5px);
-  border-bottom: 1px solid var(--green);
+  border-bottom: 1px solid var(--white);
 }
 
 .navbarMain {
@@ -29,6 +29,7 @@
   font-weight: 300;
   position: relative;
   padding: 1px 5px;
+  text-transform: uppercase;
 }
 .navLinks li,
 .hamMenu li {
@@ -36,7 +37,7 @@
 }
 
 .navbar h5 span {
-  color: var(--white);
+  font-weight: 600;
   padding-left: 3px;
 }
 
@@ -48,7 +49,7 @@
   height: 2px;
   bottom: 0;
   left: 0;
-  background-color: var(--green);
+  background-color: var(--orng);
   transform-origin: bottom right;
   transition: transform 0.25s ease-out;
 }
@@ -79,7 +80,7 @@
   height: 2px;
   bottom: 0;
   left: 0;
-  background-color: var(--green);
+  background-color: var(--orng);
   transform-origin: bottom right;
   transition: transform 0.25s ease-out;
 }
@@ -88,31 +89,6 @@
   transform-origin: bottom left;
 }
 
-.hireBtn {
-  border: 1px solid var(--green);
-  padding: 5px 50px;
-  cursor: pointer;
-  color: var(--green) !important;
-  position: relative;
-}
-.hireBtn::after {
-  content: "";
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  top: -1px;
-  right: -1px;
-  border: 1px solid var(--green);
-  z-index: -1;
-  transition: 0.2s ease-out;
-}
-.hireBtn:hover::after {
-  top: 4px;
-  right: -5px;
-}
-.hireBtn:hover {
-  color: var(--navy);
-}
 .hamMenu {
   /* position: absolute; */
   overflow: hidden;
@@ -130,19 +106,26 @@
 
 .hamMenu ul {
   padding-left: 0;
+  width: 100%;
 }
 
 .hamMenu li {
   list-style: none;
   position: relative;
   width: fit-content;
-  margin-top: 25px;
+  margin-top: 18px;
   font-size: 17px;
+  width: 100%;
+}
+
+.hamMenu li:last-child {
+  margin-bottom: 30px;
 }
 
 @media screen and (max-width: 767px) {
   .navLinks {
     display: none;
+    padding: 10px;
   }
   .ham {
     display: block;
