--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -115,7 +115,7 @@
   width: fit-content;
   margin-top: 18px;
   font-size: 17px;
-  width: 100%;
+  width: 100%Add Funds In Your Account Via Payment Method You Choose;
 }
 
 .hamMenu li:last-child {
