--- a/src/pages/homepage/Home.css
+++ b/src/pages/homepage/Home.css
@@ -1,3 +1,10 @@
+.loading {
+  position: sticky;
+  z-index: 999;
+  top: 0;
+  width: 100%;
+}
+
 .home {
   padding: 8px 150px;
   color: var(--white);
@@ -12,7 +19,7 @@
 }
 .homeHeading h1 {
   color: var(--white);
-  font-size: 30px;
+  font-size: 27px;
   font-weight: 500;
   margin-bottom: 10px;
 }
@@ -46,6 +53,7 @@
   font-size: 22px;
   color: var(--orng);
   padding-bottom: 10px;
+  font-weight: 500;
 }
 .loginForm input {
   width: 100%;
@@ -111,22 +119,13 @@
   font-size: 14px;
   font-weight: 400;
 }
-.totalMember {
-  background-color: var(--gray);
-  padding: 20px;
-  border-radius: 10px;
-  margin-top: 50px;
-  max-width: 500px;
-  width: 500px;
-  display: flex;
-  align-items: center;
-}
 
 .steps {
   margin-top: 80px;
 }
 .steps .heading {
   text-align: center;
+  margin-bottom: 100px;
 }
 .steps .heading h2 {
   text-align: center;
@@ -145,10 +144,8 @@
   padding: 10px;
   max-width: 600px;
   width: 700px;
-  border: 2px solid var(--orng);
   border-radius: 8px;
   position: relative;
-  background-color: var(--gray);
 }
 .step .number {
   background-color: var(--orng);
