--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -3,12 +3,12 @@
   margin: 0;
   text-align: center;
   padding: 10px;
-  color: #fff;
+  color: var(--orng);
   font-weight: 400;
   margin-top: 50px;
   font-size: 14px;
 }
 .footer a {
-  color: var(--orng);
+  color: var(--white);
   margin-left: 5px;
 }
