--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -5,7 +5,6 @@
   top: 0;
   background-color: var(--gray);
   backdrop-filter: blur(5px);
-  border-bottom: 1px solid var(--white);
 }
 
 .navbarMain {
@@ -24,11 +23,10 @@
 .navbar h5 {
   margin: 0;
   color: var(--orng);
-  font-size: 32px;
+  font-size: 28px;
   cursor: pointer;
-  font-weight: 300;
+  font-weight: 400;
   position: relative;
-  padding: 1px 5px;
   text-transform: uppercase;
 }
 .navLinks li,
@@ -36,10 +34,10 @@
   color: var(--white);
 }
 
-.navbar h5 span {
+/* .navbar h5 span {
   font-weight: 600;
   padding-left: 3px;
-}
+} */
 
 .navbar h5::after {
   content: "";
@@ -143,8 +141,9 @@
     display: none;
   }
   .navbar h5 {
-    font-size: 22px;
-    font-weight: 400;
-    padding-left: 10px;
+    font-size: 20px;
+    font-weight: 600;
+    padding-left: 5PX;
+   
   }
 }
