--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400;500;600;700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Kanit:wght@200;300;400;500;600&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Lexend+Deca:wght@200;300;400;500;600;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Kreon:wght@300;400;500;600;700&display=swap");
 :root {
   --white: #e6f1ff;
   --green: #64ffda;
@@ -9,6 +10,7 @@
   --orng: #ff8355;
   --kanit: "Kanit", sans-serif;
   --lexen: sans-serif;
+  --Kreon: "Kreon", serif;
 }
 body {
   margin: 0;
@@ -49,5 +51,3 @@ body {
   background-color: var(--orng);
   color: var(--dark);
 }
-
-
