--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400;500;600;700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Kanit:wght@200;300;400;500;600&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Lexend+Deca:wght@200;300;400;500;600;700&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Kreon:wght@300;400;500;600;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Bitter:wght@400;500;600;700&family=Kreon:wght@300;400;500;600;700&display=swap");
 :root {
   --white: #e6f1ff;
   --green: #64ffda;
@@ -11,6 +11,7 @@
   --kanit: "Kanit", sans-serif;
   --lexen: sans-serif;
   --Kreon: "Kreon", serif;
+  --bitter: "Bitter", serif;
 }
 body {
   margin: 0;
