--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -1,5 +1,5 @@
 .navbar {
-  padding: 8px 120px;
+  padding: 8px 120px !important;
   position: sticky;
   z-index: 999;
   top: 0;
@@ -11,6 +11,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  width: 100%;
 }
 
 .ham {
@@ -38,6 +39,7 @@
 .navLinks .active,
 .hamMenu .active {
   background-color: var(--orng);
+  transition: background-color 0.3s ease;
 }
 
 .navbar h5 span {
@@ -102,7 +104,7 @@
     display: block;
   }
   .navbar {
-    padding: 8px 10px;
+    padding: 8px 10px !important;
   }
   .navbar h5 {
     font-size: 32px;
