--- a/src/pages/Account/Account.css
+++ b/src/pages/Account/Account.css
@@ -90,7 +90,8 @@
   justify-content: flex-end;
 }
 
-.password .btn button {
+.password .btn button,
+.password .btn button:hover {
   background-color: var(--orng);
 }
 
